...
    <string name="unspecified">Unspecified</string>
    <string name="percent">%1$s\%%</string>
    <string name="account_transfers">Account Transfers</string>
    <string name="no_transactions_for_period">You don\'t have any transactions for %1$s.\nYou can add one by scrolling down and tapping "Add income" or "Add expense" button at the top.</string>
    <string name="account_confirm_deletion_description">Note: Deleting this account will remove it permanently and delete all associated transactions with it.</string>
    <string name="category_confirm_deletion_description">Note: Deleting this category will remove it permanently.</string>
    <string name="edit">Edit</string>
    <string name="transactions">transactions</string>
    <string name="home">Home</string>
    <string name="add_planned_payment">Add planned payment</string>
    <string name="add_income_uppercase">ADD INCOME</string>
    <string name="add_expense_uppercase">ADD EXPENSE</string>
    <string name="account_transfer">ACCOUNT TRANSFER</string>
...
    <string name="expired">Expired</string>
    <string name="authentication_succeeded">Authentication succeeded!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="notification_1">Have you made any transactions today? 🏁</string>
    <string name="notification_2">Did you track your expenses today? 💸</string>
    <string name="notification_3">Have you recorded your transactions today? 🏁</string>
    <string name="cash">Cash</string>
    <string name="bank">Bank</string>
    <string name="revoult">Revolut</string>
    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="bills_fees"><![CDATA[Bills & Fees]]></string>
    <string name="transport">Transport</string>
    <string name="groceries">Groceries</string>
...
    <string name="clothes">Clothes</string>
    <string name="beauty">Beauty</string>
    <string name="education">Education</string>
    <string name="pet">Pet</string>
    <string name="sports">Sports</string>
    <string name="adjust_initial_balance">Adjust your initial balance</string>
    <string name="to_accounts">To accounts</string>
    <string name="adjust_initial_balance_description"><![CDATA[Let\'s get started. Go to \"Accounts\" -> Tap an account -> Tap its balance -> Enter current balance. That\'s it!]]></string>
    <string name="create_first_planned_payment">Create your first planned payment</string>
    <string name="create_first_planned_payment_description">Automate the tracking of recurring transactions like your subscriptions, rent, salary, etc. Stay ahead of your finances by knowing how much you have to pay/get in advance.</string>
    <string name="did_you_know">Did you know?</string>
    <string name="widget_description">Ivy Wallet has a cool widget that lets you add INCOME/EXPENSES/TRANSFER transactions with 1-click from your home\n\nNote: If the "Add widget" button doesn\'t work, please add it manually from your launcher\'s widgets menu.</string>
    <string name="add_widget">Add widget</string>
...
